--- a/web/index.html
+++ b/web/index.html
@@ -125,6 +125,49 @@
 
                 <!-- Charts Section -->
                 <div class="charts-container">
+                    <!-- K-Line Chart -->
+                    <div class="chart-panel">
+                        <div class="chart-header">
+                            <h3>
+                                <i class="fas fa-chart-candlestick"></i>
+                                K線圖與價格趨勢
+                            </h3>
+                            <div class="chart-controls">
+                                <button class="period-btn active" data-period="30">1個月</button>
+                                <button class="period-btn" data-period="90">3個月</button>
+                                <button class="period-btn" data-period="180">6個月</button>
+                            </div>
+                        </div>
+                        <div class="chart-content" id="kline-container">
+                            <div class="chart-placeholder">
+                                <i class="fas fa-chart-candlestick"></i>
+                                <p>選擇股票以查看K線圖</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Technical Indicators Chart -->
+                    <div class="chart-panel">
+                        <div class="chart-header">
+                            <h3>
+                                <i class="fas fa-signal"></i>
+                                技術指標
+                            </h3>
+                            <div class="chart-controls">
+                                <div class="indicator-badges">
+                                    <span class="indicator-badge macd">MACD</span>
+                                    <span class="indicator-badge rsi">RSI</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chart-content" id="indicator-container">
+                            <div class="chart-placeholder">
+                                <i class="fas fa-signal"></i>
+                                <p>選擇股票以查看技術指標</p>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Momentum Trend Chart -->
                     <div class="chart-panel">
                         <div class="chart-header">
